--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.5.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-google-signin": "^1.3.1",
+    "vue3-highlightjs": "^1.0.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
