--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "pinia": "^2.1.7",
+    "three": "^0.157.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vue3-google-signin": "^1.3.1",
