--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "form-data": "^4.0.0",
     "pinia": "^2.1.7",
     "three": "^0.157.0",
+    "toastify-js": "^1.12.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vue3-google-signin": "^1.3.1",
